--- a/src/css components/Register.css
+++ b/src/css components/Register.css
@@ -59,6 +59,13 @@ h2 {
     transform: scale(1.12);    
 }
 
+.owner-btn-text{
+    text-transform: uppercase;
+    color: #1b9cfc;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 /* p {
     font-size: 2em;
     font-weight: bold;
